FullQa New/src/objects/GSO_Escalation__c.object
<CustomObject>
    <description>Dynamic form that will be filled out when escalating a case.  Case is the parent record</description>
    <fields>
        <fullName>Avalara_Employee_Requesting_Escalation__c</fullName>
        <formula>CreatedBy.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Avalara Employee Requesting Escalation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Number__c</fullName>
        <formula>Case__r.CaseNumber</formula>
        <label>Case Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Owner_Role_Name__c</fullName>
        <formula>Case__r.Owner:User.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Owner Role Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>GSO Escalations</relationshipLabel>
        <relationshipName>GSO_Escalations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Current_Case_Owner__c</fullName>
        <formula>Case__r.Owner:User.FirstName &amp; &quot; &quot; &amp; Case__r.Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Case Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Account_Contact_Email__c</fullName>
        <formula>Case__r.Contact.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Account Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Account_Contact__c</fullName>
        <formula>Case__r.Contact.FirstName &amp;&quot; &quot;&amp; Case__r.Contact.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Account Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Account_Name__c</fullName>
        <formula>Case__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Escalation_Classification__c</fullName>
        <label>Escalation Classification</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Failure - missed SLA, missed commitment, or given bad information</fullName>
                </value>
                <value>
                    <fullName>Favor - Non-Failure</fullName>
                </value>
                <value>
                    <fullName>Support Transfer -  For support use only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Escalation_Name__c</fullName>
        <formula>Case__r.Account.Name &amp;&quot; &quot;&amp; Case__r.Subject &amp;&quot; - &quot;&amp; Case_Number__c&amp;&quot;(&quot;&amp;Text( Case__r.Priority )&amp;&quot;)&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Escalation Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Escalation_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Escalation Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>GSO_Escalations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Failure_Subcategory__c</fullName>
        <description>https://jira.avalara.com/browse/IBST-8929</description>
        <label>Failure Subcategory</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Escalation_Classification__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Case duration</fullName>
                </value>
                <value>
                    <fullName>Responsiveness</fullName>
                </value>
                <value>
                    <fullName>Agent misalignment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <formula>IF( Case__r.RecordTypeId =&quot;01240000000Uc7D&quot;,&quot;Excise&quot;,TEXT( Case__r.Avalara_Product__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_for_Escalation__c</fullName>
        <label>Reason for Escalation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Requesting_Employee_Email_Address__c</fullName>
        <formula>CreatedBy.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requesting Employee Email Address</label>
        <type>Text</type>
    </fields>
    <label>GSO Escalation</label>
    <nameField>
        <displayFormat>{YYYY}{MM}-{0}</displayFormat>
        <label>GSO Escalation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GSO Escalations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Assignment_Lock</fullName>
        <active>true</active>
        <description>Only users Peter Ferrara, Earl Wright, Nigel Drinkwater, and Alex Stearns can change the Escalation Owner field. Added ISNEW to cover record insert 
Update: IBST-8116, IBST-11004, IBST-11468, IBST-19614</description>
        <errorConditionFormula>AND( 
$User.Id &lt;&gt; &quot;00533000004BWwo&quot;, 
$User.Id &lt;&gt; &quot;00540000002fY9I&quot;, 
$User.Id &lt;&gt; &quot;00533000003byBA&quot;, 
$User.Id &lt;&gt; &quot;0053300000458DY&quot;, 
$User.Id &lt;&gt; &quot;00540000001hPyJ&quot;, 
$User.Id &lt;&gt; &quot;00540000001wMI5&quot;, 
$User.Id &lt;&gt; &quot;00540000001gltF&quot;, 
$User.Id &lt;&gt; &quot;0050b000004K0XG&quot;,

$User.Id &lt;&gt; &quot;00540000001hPyY&quot;, 

$User.Id &lt;&gt; &quot;00533000003RS4P&quot;, 

$User.Id &lt;&gt; &quot;00533000003RabR&quot;, 

$User.Id &lt;&gt; &quot;00533000003S4my&quot;,

$User.Id &lt;&gt; &quot;00533000003ke0U&quot;, 
OR( 
ISCHANGED(Escalation_Owner__c )) 
)</errorConditionFormula>
        <errorMessage>You do not have the ability to assign the Escalation Owner.</errorMessage>
    </validationRules>
</CustomObject>